--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,33 @@
+html {
+  overflow: hidden;
+  height: 100%;
+}
 body {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100%;
     margin: 0;
-    background-color: #f9e3e3;
+    background-color: #fff;
     font-family: 'Arial', sans-serif;
-    flex-direction: column;
+    overflow: hidden;
   }
   
   .container {
     text-align: center;
   }
+  .container2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
   
   h1 {
     font-size: 2.5em;
-    color: #d32f2f;
+    color: #884fff;
   }
   
   .buttons {
@@ -45,6 +57,7 @@ body {
   
   .gif_container img {
     max-width: 100%;
+    width: 280px;
     height: auto;
     border-radius: 10px;
     margin-top: 20px;
