--- a/yes_style.css
+++ b/yes_style.css
@@ -4,8 +4,9 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    background-color: #f9e3e3;
+    background-color: #fff;
     font-family: 'Arial', sans-serif;
+    overflow: hidden;
 }
 
 .container {
@@ -14,7 +15,7 @@ body {
 
 .header_text {
     font-size: 3em;
-    color: #d32f2f;
+    color: #884fff;
 }
 
 .gif_container img {
